# bandit

./: Pipfile  README.rst  setup.cfg
bandit/blacklists/: calls.py  imports.py
bandit/plugins/: base64_b64decode.py  base64_b64encode.py  close_file.py  code_InteractiveInterpreter_runsource.py  compileall_compile_file.py  concurrent_futures_Executor.py  ctypes_CDLL.py  encoding.py  eval.py  exec.py  fileinput_input.py  getpass_getuser.py  http.py  http_client_HTTPConnection.py  http_client_HTTPConnection_getresponse.py  http_client_HTTPConnection_request.py  http_cookiejar_FileCookieJar_load.py  http_server_HTTPServer.py  ip_found.py  multiprocessing_Process.py  multiprocessing_pool.py  networking.py  open_file.py  os.py  os_chmod.py  os_environ.py  os_getuid.py  os_popen.py  os_read.py  os_system.py  os_write.py  pathlib_Path_rmdir.py  platform_system.py  pwd_getpwuid.py  shutil_rmtree.py  signal_signal.py  smtplib_SMTP_SSL_sendmail.py  socket.py  socket_close.py  socket_connect.py  (+28 more)
examples/: base64-b64decode.py  multiprocessing_pool.py  open_file_used.py  os_chmod.py  os_getuid.py  platform_system.py  signal_signal.py  socket_connect.py  socket_gethostname.py  socket_socket.py  urllib2_Request.py  urllib2_urlopen.py  urllib_request_Request.py  urllib_request_urlopen.py  zlib_decompress.py
