[metadata]
name = bandit
summary = Security oriented static analyser for python code.
description-file =
    README.rst
author = PyCQA
author-email = code-quality@python.org
home-page = https://bandit.readthedocs.io/en/latest/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security
project_urls =
    Release notes = https://github.com/PyCQA/bandit/releases

[entry_points]
console_scripts =
    bandit = bandit.cli.main:main
    bandit-config-generator = bandit.cli.config_generator:main
    bandit-baseline = bandit.cli.baseline:main
bandit.blacklists =
    #calls = bandit.blacklists.calls:gen_blacklist
    imports = bandit.blacklists.imports:gen_blacklist
bandit.formatters =
    csv = bandit.formatters.csv:report
    json = bandit.formatters.json:report
    txt = bandit.formatters.text:report
    xml = bandit.formatters.xml:report
    html = bandit.formatters.html:report
    screen = bandit.formatters.screen:report
    yaml = bandit.formatters.yaml:report
    custom = bandit.formatters.custom:report
bandit.plugins =

    # bandit/plugins/base64_b64decode.py
    base64_b64decode = bandit.plugins.base64_b64decode:base64_b64decode
    
    # bandit/plugins/base64_b64encode.py
    base64_b64encode = bandit.plugins.base64_b64encode:base64_b64encode

    # bandit/plugins/socket_gethostname.py
    socket_gethostname = bandit.plugins.socket_gethostname:socket_gethostname

    # bandit/plugins/pwd_getpwuid.py
    pwd_getpwuid = bandit.plugins.pwd_getpwuid:pwd_getpwuid

    # bandit/plugins/socket_socket.py
    socket_socket = bandit.plugins.socket_socket:socket_socket

    # bandit/plugins/os_getuid.py
    os_getuid = bandit.plugins.os_getuid:os_getuid

    # bandit/plugins/zlib_decompress.py
    zlib_decompress = bandit.plugins.zlib_decompress:zlib_decompress

    # bandit/plugins/urllib_request_request.py
    urllib_request_request = bandit.plugins.urllib_request_request:urllib_request_request

    # bandit/plugins/platform_system.py
    platform_system = bandit.plugins.platform_system:platform_system

    # bandit/plugins/os_chmod.py
    os_chmod = bandit.plugins.os_chmod:os_chmod

    # bandit/plugins/os_system.py
    os_system = bandit.plugins.os_system:os_system

    # bandit/plugins/urllib2_request.py
    urllib2_request = bandit.plugins.urllib2_request:urllib2_request

    # bandit/plugins/multiprocessing_pool.py
    multiprocessing_pool = bandit.plugins.multiprocessing_pool:multiprocessing_pool

    # bandit/plugins/signal_signal.py
    signal_signal = bandit.plugins.signal_signal:signal_signal

    # bandit/plugins/getpass_getuser.py
    getpass_getuser = bandit.plugins.getpass_getuser:getpass_getuser

    # bandit/plugins/socket_socket_connect.py
    socket_socket_connect = bandit.plugins.socket_socket_connect:socket_socket_connect

    # bandit/plugins/socket_socket_settimeout.py
    socket_socket_settimeout = bandit.plugins.socket_socket_settimeout:socket_socket_settimeout

    # bandit/plugins/socket_socket_send.py
    socket_socket_send = bandit.plugins.socket_socket_send:socket_socket_send

    # bandit/plugins/socket_socket_recv.py
    socket_socket_recv = bandit.plugins.socket_socket_recv:socket_socket_recv

    # bandit/plugins/socket_socket_sendall.py
    socket_socket_sendall = bandit.plugins.socket_socket_sendall:socket_socket_sendall

    # bandit/plugins/socket_socket_close.py
    socket_socket_close = bandit.plugins.socket_socket_close:socket_socket_close

    # bandit/plugins/exec.py
    exec_used = bandit.plugins.exec:exec_used

    # bandit/plugins/open_file.py
    open_file = bandit.plugins.open_file:open_file

    # bandit/plugins/urllib_request_urlopen.py
    urllib_request_urlopen = bandit.plugins.urllib_request_urlopen:urllib_request_urlopen

    # bandit/plugins/http_client_HTTPConnection.py
    http_client_HTTPConnection = bandit.plugins.http_client_HTTPConnection:http_client_HTTPConnection

    # bandit/plugins/http_client_HTTPConnection_request.py
    http_client_HTTPConnection_request= bandit.plugins.http_client_HTTPConnection_request:http_client_HTTPConnection_request

    # bandit/plugins/http_client_HTTPConnection_getresponse.py
    http_client_HTTPConnection_getresponse = bandit.plugins.http_client_HTTPConnection_getresponse:http_client_HTTPConnection_getresponse

    # bandit/plugins/urllib2_urlopen.py
    urllib2_urlopen = bandit.plugins.urllib2_urlopen:urllib2_urlopen

    # bandit/plugins/url_found.py
    url_found = bandit.plugins.url_found:url_found

    # bandit/plugins/ip_found.py
    ip_found = bandit.plugins.ip_found:ip_found

    # bandit/plugins/string_decode.py
    string_decode = bandit.plugins.string_decode:string_decode

    # bandit/plugins/string_encode.py
    string_encode = bandit.plugins.string_encode:string_encode

    # bandit/plugins/urllib_urlretrieve.py
    urllib_urlretrieve = bandit.plugins.urllib_urlretrieve:urllib_urlretrieve

    # bandit/plugins/ssl_SSLSocket_read.py
    ssl_SSLSocket_read = bandit.plugins.ssl_SSLSocket_read:ssl_SSLSocket_read

    # bandit/plugins/ssl_SSLSocket_send.py
    ssl_SSLSocket_send = bandit.plugins.ssl_SSLSocket_send:ssl_SSLSocket_send

    # bandit/plugins/smtplib_SMTP_SSL_sendmail.py
    smtplib_SMTP_SSL_sendmail = bandit.plugins.smtplib_SMTP_SSL_sendmail:smtplib_SMTP_SSL_sendmail

    # bandit/plugins/http_server_HTTPServer.py
    http_server_HTTPServer = bandit.plugins.http_server_HTTPServer:http_server_HTTPServer
[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  examples*

[bdist_wheel]
universal = 1
